// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction Fee Box should show Transaction Advanced Fee Box screen 1`] = `
<div
  className="MuiGrid-root TransactionFeeBoxComponent-container-0-2-1 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
  >
    <div
      className="MuiGrid-root MuiGrid-container"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <span
          className="TransactionFeeBoxComponent-networkTransactionFeeTitle-0-2-2 feeTitle"
        >
           Network Transaction Fee: 
        </span>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiGrid-root Component-root-0-2-20 MuiGrid-container MuiGrid-spacing-xs-8"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8"
            >
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                <div>
                  0.000000000000151
                   
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                ETH
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                /
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8"
            >
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                <div>
                  $0.000000000037191
                   
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                USD
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root TransactionFeeBoxComponent-showAdvancedContainer-0-2-3 MuiGrid-item"
      onClick={[Function]}
    >
      <span>
         Advanced 
      </span>
      <i
        className="TransactionFeeBoxComponent-icon-0-2-4  TransactionFeeBoxComponent-downIcon-0-2-6"
      >
         
      </i>
    </div>
  </div>
  <div
    className="TransactionFeeBoxComponent-fullWidth-0-2-9"
  >
    <div
      className="MuiGrid-root TransactionFeeBoxComponent-inputsContainer-0-2-7 MuiGrid-container MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-space-between"
    >
      <div
        className="TransactionFeeBoxComponent-formGroup-0-2-8"
      >
        <label>
          Gas Price (Gwei)
        </label>
        <input
          className="TransactionFeeBoxComponent-formControl-0-2-15"
          onChange={[Function]}
          type="text"
          value={0}
        />
      </div>
      <div>
        <div
          className="TransactionFeeBoxComponent-formGroup-0-2-8"
        >
          <label>
            Gas Limit
          </label>
          <input
            className="TransactionFeeBoxComponent-formControl-0-2-15"
            onChange={[Function]}
            type="text"
            value={2100}
          />
        </div>
      </div>
      <div
        className="TransactionFeeBoxComponent-formGroup-0-2-8"
      >
        <label>
          Nonce
        </label>
        <span
          className="TransactionFeeBoxComponent-nonceValue-0-2-14"
        >
           
          1
           
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="TransactionFeeBoxComponent-currNetworkStatusContainer-0-2-16"
      >
        <span
          className="TransactionFeeBoxComponent-currNetworkStatusTitle-0-2-17"
        >
          Current Network Status: 
        </span>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root TransactionFeeBoxComponent-reloadNetworkIcon-0-2-18"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
          />
        </svg>
      </div>
      <div
        className="TransactionFeeBoxComponent-gasPriceValuesContainer-0-2-19"
      >
        <p>
           Under 30 Mins: 
          1.5
           Gwei 
        </p>
        <p>
           Under 5 Mins: 
          18
           Gwei 
        </p>
        <p>
           Under 2 Mins: 
          50
           Gwei 
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transaction Fee Box should show Transaction Fee Box screen 1`] = `
<div
  className="MuiGrid-root TransactionFeeBoxComponent-container-0-2-1 MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap"
  >
    <div
      className="MuiGrid-root MuiGrid-container"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <span
          className="TransactionFeeBoxComponent-networkTransactionFeeTitle-0-2-2 feeTitle"
        >
           Network Transaction Fee: 
        </span>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <div
          className="MuiGrid-root Component-root-0-2-20 MuiGrid-container MuiGrid-spacing-xs-8"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8"
            >
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                <div>
                  0.000000000000151
                   
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                ETH
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                /
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-8"
            >
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                <div>
                  $0.000000000037191
                   
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-item"
              >
                USD
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root TransactionFeeBoxComponent-showAdvancedContainer-0-2-3 MuiGrid-item"
      onClick={[Function]}
    >
      <span>
         Advanced 
      </span>
      <i
        className="TransactionFeeBoxComponent-icon-0-2-4  TransactionFeeBoxComponent-rightIcon-0-2-5"
      >
         
      </i>
    </div>
  </div>
</div>
`;
